主页已完成,基本资料差发送请求

--- a/src/assets/global.less
+++ b/src/assets/global.less
@@ -5,9 +5,23 @@ body {
   padding: 0;
   height: 100%;
 }
-
+// 全局重置 element-ui 组件库的基础样式
+.el-menu-item,
+.el-submenu__title
 .el-input__inner,
 .el-button,
 .el-link {
   font-size: 12px;
+}
+// 重置菜单的基础样式
+.el-menu.el-menu--horizontal {
+  height: 60px;
+  border-bottom: none;
+}
+// 重置卡片的基础样式
+.el-card.is-always-shadow,
+.el-card.is-hover-shadow:focus,
+.el-card.is-hover-shadow:hover {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  font-size: 13px;
 }
