--- a/src/css/global.css
+++ b/src/css/global.css
@@ -4,8 +4,19 @@ body {
   padding: 0;
   height: 100%;
 }
-.el-input__inner,
+.el-menu-item,
+.el-submenu__title .el-input__inner,
 .el-button,
 .el-link {
   font-size: 12px;
+}
+.el-menu.el-menu--horizontal {
+  height: 60px;
+  border-bottom: none;
+}
+.el-card.is-always-shadow,
+.el-card.is-hover-shadow:focus,
+.el-card.is-hover-shadow:hover {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  font-size: 13px;
 }
